node-main/deps/v8/test/message/fail/class-private-static-count-method.out
*%(basename)s:7: TypeError: Receiver must be class A
  static test() { this.#a++; }
                       ^
TypeError: Receiver must be class A
    at Object.test (*%(basename)s:7:24)
    at *%(basename)s:10:8
